src/test/ui/variance/variance-unused-region-param.stderr
warning: lifetime parameter `'a` never used
  --> $DIR/variance-unused-region-param.rs:3:19
   |
LL | struct SomeStruct<'a> { x: u32 }
   |                  -^^- help: elide the unused lifetime
   |
   = note: `#[warn(unused_lifetimes)]` on by default

warning: lifetime parameter `'a` never used
  --> $DIR/variance-unused-region-param.rs:4:15
   |
LL | enum SomeEnum<'a> { Nothing }
   |              -^^- help: elide the unused lifetime

warning: lifetime parameter `'a` never used
  --> $DIR/variance-unused-region-param.rs:5:17
   |
LL | trait SomeTrait<'a> { fn foo(&self); }
   |                -^^- help: elide the unused lifetime

error[E0392]: parameter `'a` is never used
  --> $DIR/variance-unused-region-param.rs:3:19
   |
LL | struct SomeStruct<'a> { x: u32 }
   |                   ^^ unused parameter
   |
   = help: consider removing `'a` or using a marker such as `std::marker::PhantomData`

error[E0392]: parameter `'a` is never used
  --> $DIR/variance-unused-region-param.rs:4:15
   |
LL | enum SomeEnum<'a> { Nothing }
   |               ^^ unused parameter
   |
   = help: consider removing `'a` or using a marker such as `std::marker::PhantomData`

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0392`.
